@@ -130,13 +130,11 @@ void *malloc (size_t size);
 void *realloc (void *ptr, size_t size);
 #endif
 #if __STDC_VERSION__ >= 201112L
-#if 0 // Won't compile on pic14 TODO: Fix this!
 inline void *aligned_alloc(size_t alignment, size_t size)
 {
   (void)alignment;
   return malloc(size);
 }
-#endif
 #endif
 extern void free (void * ptr);
 
