@@ -48,6 +48,12 @@ void __printf(const char *szFormat, ...);
 # define __pdata __data
 #endif
 
+#if defined(__SDCC_pic14)
+# define __idata __data
+# define __xdata __data
+# define __pdata __data
+#endif
+
 #if defined(__SDCC_pic16)
 # define __idata __data
 # define __xdata __data
